--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/toxicity"></script>
+    <script src="js/tfjs.js"></script>
+    <script src="js/toxicity.js"></script>
 
 </head>
 
