--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
             (i.e. profanity, sexual explicitness).
 
         </div>
-
+        <!-- <center>
+            <div class="lds-ring">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </center> -->
         <div id="table-wrapper"></div>
 
-        <p>Enter statement below to check for it's toxicity.</p>
-        <div>
+
+        <div id="inp">
+            <p>Enter statement below to check for it's toxicity.</p>
             <input id="classify-new-text-input" placeholder="i.e. 'you suck'">
             <div id="classify-new-text">Check</div>
         </div>
