--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
             (i.e. profanity, sexual explicitness).
 
         </div>
-        <!-- <center>
-            <div class="lds-ring">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+        <center>
+            <div id="loader">
+                <div class="lds-ring">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <br>
+                <br>
+                <br>Please wait while the model loads.
             </div>
-        </center> -->
+        </center>
         <div id="table-wrapper"></div>
 
 
